Opened 3 years ago

Closed 3 years ago

#17289 closed bug (fixed)

haiku 32bit hrev.55457 does not start to Desktop (haiku64bit does not start at all!)

Reported by: bruno Owned by: waddlesplash
Priority: normal Milestone: Unscheduled
Component: Servers/launch_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Haiku boots into black screen.

cttl+alt+del to start Desktop

USB mouse does not work Touchpad works.

input_server always busy if USB-mouse plugged in

LnLauncher does not start. Manual start works.

Attachments (1)

syslog (375.7 KB ) - added by bruno 3 years ago.

Download all attachments as: .zip

Change History (10)

by bruno, 3 years ago

Attachment: syslog added

comment:1 by korli, 3 years ago

Version: R1/beta3R1/Development

comment:2 by shaka, 3 years ago

I can confirm x86_64 not booting. Last thing to load on my machine is : "KERN: x86_init_fpu: CPU has SSE... enabling FXSR and XMM"

slab memory manager never loaded

comment:3 by bronzie94, 3 years ago

I also have problems with 64bit version of this hrev55457 - partial boot then stall/freeze, see https://dev.haiku-os.org/ticket/17227#comment:22

comment:4 by waddlesplash, 3 years ago

Component: - GeneralServers/launch_daemon
Owner: changed from nobody to waddlesplash
Status: newin-progress

USB problems should be resolved in hrev55459.

I have a change in review that fixes this regression: https://review.haiku-os.org/c/haiku/+/4510/2

comment:5 by bruno, 3 years ago

ah ok USB-Mouse now works again Haiku 32bit hrev. 55459 but still booting into black screen. So something to do with Rudolphs Intel_extreme video driver, then...

comment:6 by HAL, 3 years ago

I am in hre55459 x86_64. It only boots to the light blue background color. There is no deskbar or tracker. ctrl alt delete pressed several times will bring up the team monitor where restarting the desktop starts deskbar and tracker.

Last edited 3 years ago by HAL (previous) (diff)

in reply to:  6 comment:7 by ifelice, 3 years ago

Replying to HAL:

I am in hre55459 x86_64. It only boots to the light blue background color. There is no deskbar or tracker. ctrl alt delete pressed several times will bring up the team monitor where restarting the desktop starts deskbar and tracker.

Same here

comment:8 by vidrep, 3 years ago

Hrev55459 x86_64 Booting to blue screen with mouse pointer. No desktop. Desktop can be relaunched from TeamMonitor.

comment:9 by waddlesplash, 3 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev55460.

Note: See TracTickets for help on using tickets.